# weconnect-auto

./: .gitignore  README.md  main.py  pyproject.toml
weconnectauto/: main.py  models.py  weconnectapi.py
