[project]
name = "weconnect-auto"
version = "0.1.0"
description = "CLI or Python client for scripting your Volkswagen auto info from https://www.vwbedrijfswagens.nl/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "weconnectauto"
]

[project.scripts]
vwcar = "weconnectauto.main:app"
